[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/game/levels/Level01.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/levels/LevelManager.gd" type="Script" id=2]
[ext_resource path="res://src/game/ui/GUIManager.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/ui/gui/hud_heartFull.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/ui/gui/hud_heartEmpty.png" type="Texture" id=5]
[ext_resource path="res://assets/sound/UI/CLICK_001.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/textures/ui/gui/pause_button.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Default-Medium.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/fonts/Default-Medium-Outline.tres" type="DynamicFont" id=9]
[ext_resource path="res://src/game/ui/PauseMenu.gd" type="Script" id=10]
[ext_resource path="res://assets/fonts/Title-Big.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/textures/ui/menus/close.png" type="Texture" id=12]
[ext_resource path="res://src/game/ui/VictoryMenu.gd" type="Script" id=13]
[ext_resource path="res://src/game/ui/DefeatMenu.gd" type="Script" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.670588, 0.478431, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 0.894118, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id=3]
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color( 0, 0, 0, 0.4 )
shadow_size = 13

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainPanel:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainPanel:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BG:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "show"
tracks/0/type = "value"
tracks/0/path = NodePath("MainPanel:anchor_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainPanel:anchor_bottom")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 0.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BG:color")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_pause_tree"
} ]
}

[node name="LevelManager" type="Node"]
script = ExtResource( 2 )
levels = [ ExtResource( 1 ) ]
main_menu_path = "res://src/screens/MainMenu.tscn"

[node name="UI" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="HPProgress" type="TextureProgress" parent="UI/GUI"]
unique_name_in_owner = true
margin_left = 6.0
margin_top = 6.0
margin_right = 59.0
margin_bottom = 51.0
max_value = 1.0
step = 0.05
value = 0.5
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
fill_mode = 3

[node name="PauseButton" type="TextureButton" parent="UI/GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -44.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = 44.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
texture_focused = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Menus" type="Control" parent="UI"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="OpenSound" type="AudioStreamPlayer" parent="UI/Menus"]
stream = ExtResource( 6 )
pitch_scale = 2.0

[node name="PauseMenu" type="Control" parent="UI/Menus"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 10 )
open_sound_path = NodePath("../OpenSound")

[node name="BG" type="ColorRect" parent="UI/Menus/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="MainPanel" type="PanelContainer" parent="UI/Menus/PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menus/PauseMenu/MainPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 290.0
mouse_filter = 2

[node name="ClosePivot" type="Control" parent="UI/Menus/PauseMenu/MainPanel/VBoxContainer"]
margin_left = 380.0
margin_right = 380.0
mouse_filter = 2
size_flags_horizontal = 8

[node name="CloseButton" type="TextureButton" parent="UI/Menus/PauseMenu/MainPanel/VBoxContainer/ClosePivot"]
margin_left = -36.0
margin_top = -26.0
margin_right = 14.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 8
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TitleMargin" type="MarginContainer" parent="UI/Menus/PauseMenu/MainPanel/VBoxContainer"]
margin_top = 4.0
margin_right = 380.0
margin_bottom = 86.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="Label" type="Label" parent="UI/Menus/PauseMenu/MainPanel/VBoxContainer/TitleMargin"]
margin_top = 20.0
margin_right = 380.0
margin_bottom = 62.0
size_flags_vertical = 6
custom_colors/font_outline_modulate = Color( 0.466667, 0.172549, 0.215686, 1 )
custom_fonts/font = ExtResource( 9 )
text = "Paused"
align = 1
valign = 1

[node name="ButtonsMargin" type="MarginContainer" parent="UI/Menus/PauseMenu/MainPanel/VBoxContainer"]
margin_top = 90.0
margin_right = 380.0
margin_bottom = 264.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menus/PauseMenu/MainPanel/VBoxContainer/ButtonsMargin"]
margin_left = 50.0
margin_right = 330.0
margin_bottom = 149.0
mouse_filter = 2
custom_constants/separation = 25

[node name="RestartButton" type="Button" parent="UI/Menus/PauseMenu/MainPanel/VBoxContainer/ButtonsMargin/VBoxContainer"]
margin_right = 280.0
margin_bottom = 62.0
size_flags_horizontal = 5
custom_colors/font_color_disabled = Color( 0.63, 0.56301, 0.4473, 1 )
custom_colors/font_color_focus = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color = Color( 0.61, 0.46909, 0.2257, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Restart"

[node name="ExitButton" type="Button" parent="UI/Menus/PauseMenu/MainPanel/VBoxContainer/ButtonsMargin/VBoxContainer"]
margin_top = 87.0
margin_right = 280.0
margin_bottom = 149.0
size_flags_horizontal = 5
custom_colors/font_color_disabled = Color( 0.63, 0.56301, 0.4473, 1 )
custom_colors/font_color_focus = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color = Color( 0.61, 0.46909, 0.2257, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Exit"

[node name="VictoryMenu" type="Control" parent="UI/Menus"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 13 )

[node name="BG" type="ColorRect" parent="UI/Menus/VictoryMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.25098 )

[node name="MainPanel" type="PanelContainer" parent="UI/Menus/VictoryMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menus/VictoryMenu/MainPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 290.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/Menus/VictoryMenu/MainPanel/VBoxContainer"]
margin_top = 10.0
margin_right = 380.0
margin_bottom = 91.0
size_flags_vertical = 6
custom_colors/font_outline_modulate = Color( 0.466667, 0.172549, 0.215686, 1 )
custom_fonts/font = ExtResource( 11 )
text = "Victory"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/Menus/VictoryMenu/MainPanel/VBoxContainer"]
margin_top = 106.0
margin_right = 380.0
margin_bottom = 280.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menus/VictoryMenu/MainPanel/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 330.0
margin_bottom = 149.0
mouse_filter = 2
custom_constants/separation = 25

[node name="NextButton" type="Button" parent="UI/Menus/VictoryMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 62.0
size_flags_horizontal = 5
custom_colors/font_color_disabled = Color( 0.63, 0.56301, 0.4473, 1 )
custom_colors/font_color_focus = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color = Color( 0.61, 0.46909, 0.2257, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Next"

[node name="ExitButton" type="Button" parent="UI/Menus/VictoryMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 280.0
margin_bottom = 149.0
size_flags_horizontal = 5
custom_colors/font_color_disabled = Color( 0.63, 0.56301, 0.4473, 1 )
custom_colors/font_color_focus = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color = Color( 0.61, 0.46909, 0.2257, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Exit"

[node name="DefeatMenu" type="Control" parent="UI/Menus"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 14 )

[node name="DefeatAnim" type="AnimationPlayer" parent="UI/Menus/DefeatMenu"]
anims/RESET = SubResource( 4 )
anims/show = SubResource( 5 )

[node name="BG" type="ColorRect" parent="UI/Menus/DefeatMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MainPanel" type="PanelContainer" parent="UI/Menus/DefeatMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menus/DefeatMenu/MainPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 290.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/Menus/DefeatMenu/MainPanel/VBoxContainer"]
margin_top = 10.0
margin_right = 380.0
margin_bottom = 91.0
size_flags_vertical = 6
custom_colors/font_outline_modulate = Color( 0.466667, 0.172549, 0.215686, 1 )
custom_fonts/font = ExtResource( 11 )
text = "Defeat"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/Menus/DefeatMenu/MainPanel/VBoxContainer"]
margin_top = 106.0
margin_right = 380.0
margin_bottom = 280.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menus/DefeatMenu/MainPanel/VBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 330.0
margin_bottom = 149.0
mouse_filter = 2
custom_constants/separation = 25

[node name="RestartButton" type="Button" parent="UI/Menus/DefeatMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 62.0
size_flags_horizontal = 5
custom_colors/font_color_disabled = Color( 0.63, 0.56301, 0.4473, 1 )
custom_colors/font_color_focus = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color = Color( 0.61, 0.46909, 0.2257, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Restart"

[node name="ExitButton" type="Button" parent="UI/Menus/DefeatMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 280.0
margin_bottom = 149.0
size_flags_horizontal = 5
custom_colors/font_color_disabled = Color( 0.63, 0.56301, 0.4473, 1 )
custom_colors/font_color_focus = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color = Color( 0.61, 0.46909, 0.2257, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_colors/font_color_pressed = Color( 0.980392, 0.752941, 0.364706, 1 )
custom_fonts/font = ExtResource( 8 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
text = "Exit"

[node name="CurrentLevelContainer" type="Node" parent="."]

[connection signal="pressed" from="UI/GUI/PauseButton" to="UI/Menus/PauseMenu" method="show"]
[connection signal="pressed" from="UI/Menus/PauseMenu/MainPanel/VBoxContainer/ClosePivot/CloseButton" to="UI/Menus/PauseMenu" method="hide"]
[connection signal="pressed" from="UI/Menus/PauseMenu/MainPanel/VBoxContainer/ButtonsMargin/VBoxContainer/RestartButton" to="." method="_restart_called"]
[connection signal="pressed" from="UI/Menus/PauseMenu/MainPanel/VBoxContainer/ButtonsMargin/VBoxContainer/RestartButton" to="UI/Menus/PauseMenu" method="hide"]
[connection signal="pressed" from="UI/Menus/PauseMenu/MainPanel/VBoxContainer/ButtonsMargin/VBoxContainer/ExitButton" to="." method="_return_called"]
[connection signal="pressed" from="UI/Menus/PauseMenu/MainPanel/VBoxContainer/ButtonsMargin/VBoxContainer/ExitButton" to="UI/Menus/PauseMenu" method="hide"]
[connection signal="pressed" from="UI/Menus/VictoryMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer/NextButton" to="." method="_next_called"]
[connection signal="pressed" from="UI/Menus/VictoryMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer/NextButton" to="UI/Menus/VictoryMenu" method="hide"]
[connection signal="pressed" from="UI/Menus/VictoryMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_return_called"]
[connection signal="pressed" from="UI/Menus/VictoryMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer/ExitButton" to="UI/Menus/VictoryMenu" method="hide"]
[connection signal="pressed" from="UI/Menus/DefeatMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_restart_called"]
[connection signal="pressed" from="UI/Menus/DefeatMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer/RestartButton" to="UI/Menus/DefeatMenu" method="hide"]
[connection signal="pressed" from="UI/Menus/DefeatMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_return_called"]
[connection signal="pressed" from="UI/Menus/DefeatMenu/MainPanel/VBoxContainer/MarginContainer/VBoxContainer/ExitButton" to="UI/Menus/DefeatMenu" method="hide"]
